Apply filter on File Name to pick

--- a/Flume/StockPricesAgent.properties
+++ b/Flume/StockPricesAgent.properties
@@ -7,6 +7,7 @@ StockPricesAgent.sinks = StockPricesSink
 StockPricesAgent.sources.StockPricesSource.type = spooldir
 StockPricesAgent.sources.StockPricesSource.spoolDir = /mnt/home/vijayanand25/hadoop-training-projects/flume/large_dir_spool/watch_dir
 StockPricesAgent.sources.StockPricesSource.channels=StockPricesChannel
+StockPricesAgent.sources.StockPricesSource.includePattern=^prices.*$
 
 StockPricesAgent.sources.StockPricesSource.interceptors=t1
 StockPricesAgent.sources.StockPricesSource.interceptors.t1.type=timestamp
